exporters/pve-exporter/pve-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pve-deployment
  labels:
    app: pve-deployment
spec:
  revisionHistoryLimit: 1 #limit revision history to one
  replicas: 1
  selector:
    matchLabels:
      app: pve-pod
  template:
    metadata:
      labels:
        app: pve-pod
    spec:
      containers:
        - name: exporter
          image: prompve/prometheus-pve-exporter:v2.2.3
          ports:
            - containerPort: 9221
              name: pve-export
              protocol: TCP
          resources:
            limits:
              memory: 64Mi
              cpu:  250m
            requests:
              cpu: 100m
              memory: 100m
