exporters/pve-exporter/pve-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve-svc
spec:
  type: ClusterIP
  selector:
    app: pve-pod
  ports:
    - name: pve-outport
      protocol: TCP
      port: 9221
      targetPort:  pve-export
